--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,12 @@
 !.yarn/releases
 !.yarn/versions
 
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # testing
 /coverage
 
