--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@edge-csrf/nextjs": "^2.5.2",
+    "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
@@ -18,12 +19,17 @@
     "lucide-react": "^0.537.0",
     "mongoose": "^8.17.0",
     "next": "15.4.6",
+    "next-themes": "^0.4.6",
+    "node-ssh": "^13.2.1",
     "pino": "^9.7.0",
     "pino-pretty": "^13.1.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.62.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "sonner": "^2.0.7",
+    "ssh2": "^1.16.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.15"
   },
@@ -35,11 +41,17 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/socket.io": "^3.0.2",
+    "@types/ssh2": "^1.15.5",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
     "tailwindcss": "^4",
     "tsx": "^4.20.3",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5"
+  },
+  "pnpm": {
+    "overrides": {
+      "cpu-features": "0.0.9"
+    }
   }
 }
